# sentinel-poc

./: .gitignore  Project_Sentinel_Progress_Report.docx  README.md  TESTING.md  project_sentinel_agent_prompt (1).md
deploy/: hf-space-README.md  (+1 more)
project_sentinel/: .dockerignore  Dockerfile  bench_latency.py  conftest.py  main.py  pyproject.toml  run_pipeline.py
project_sentinel/backend/: app.py  fhir_source.py
project_sentinel/data/processed/: test.parquet
project_sentinel/frontend/: .env.development  index.html  package-lock.json  package.json
project_sentinel/frontend/src/: App.tsx  index.css
project_sentinel/models/: model_metadata.json  stage1_lgbm_12h.pkl  stage1_lgbm_24h.pkl  stage1_lgbm_6h.pkl  stage2_lgbm_12h.pkl  stage2_lgbm_24h.pkl  stage2_lgbm_6h.pkl  stage2_xgb_12h.pkl  stage2_xgb_24h.pkl  stage2_xgb_6h.pkl
project_sentinel/models/calibrators/: stage1_lgbm_12h_calibrator.pkl  stage1_lgbm_24h_calibrator.pkl  stage1_lgbm_6h_calibrator.pkl  stage2_lgbm_12h_calibrator.pkl  stage2_lgbm_24h_calibrator.pkl  stage2_lgbm_6h_calibrator.pkl  stage2_xgb_12h_calibrator.pkl  stage2_xgb_24h_calibrator.pkl  stage2_xgb_6h_calibrator.pkl
project_sentinel/notebooks/: 01_data_acquisition.ipynb  02_cohort_definition.ipynb  03_feature_engineering.ipynb  04_label_engineering.ipynb  05_model_training.ipynb  06_evaluation.ipynb  07_explainability.ipynb
project_sentinel/src/: __init__.py  conformal.py  data_loader.py  evaluation.py  explain.py  features.py  labels.py  models.py
project_sentinel/tests/: test_app.py  test_invariants.py  test_richer_features.py
(+11 files in other folders)
