[project]
name = "project-sentinel"
version = "0.1.0"
description = "Prospective ML early-warning pipeline for Sepsis-Associated Acute Kidney Injury (SA-AKI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.52.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
